# secrets-manager-rs

./: .gitignore  .secrets-manifest.example  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  secrets-manager.example.toml
scripts/: secs-man-ssh
src/: checksum.rs  chown_spec.rs  cli.rs  config.rs  crypto.rs  export.rs  import.rs  main.rs  manifest.rs  safe_fs.rs  snapshot.rs  utf8path_ext.rs  verify_export.rs
