[package]
name = "secs-man"
version = "0.3.0-dev"
edition = "2024"

[[bin]]
name = "secs-man"
path = "src/main.rs"

[dependencies]
age = "0.11.1"
anyhow = "1.0.98"
camino = "1.1.10"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
rpassword = "7.4.0"
sha256 = "1.6.0"
thiserror = "2.0.12"
